form: Adjust horizontal centering, add vert whitespace to avoid CLS on errors

--- a/css/styles_nes.css
+++ b/css/styles_nes.css
@@ -111,6 +111,8 @@ main {
 /* FORM ELEMENTS */
 .form_table {
   width: 100%;  
+  max-width: 600px;
+  margin-inline: auto;
 }
 
 .form_row {
